<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shadowws.offurz.Fragments.TermsAndConditionsFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        android:weightSum="1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/redToolbar"
        android:textSize="20dp"
        android:gravity="center"
        android:id="@+id/terms1"
        android:text="@string/Terms_Conditions" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:textSize="16dp"
        android:gravity="center_vertical"
        android:text="@string/termsCon_content"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/redToolbar"
            android:textSize="20dp"
            android:gravity="center"
            android:id="@+id/privacy"
            android:text="@string/privacy" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:textSize="16dp"
            android:gravity="center_vertical"
            android:text="@string/privacy_content"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/redToolbar"
            android:textSize="20dp"
            android:gravity="center"
            android:id="@+id/your"
            android:text="@string/your_activity" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:textSize="16dp"
            android:gravity="center_vertical"
            android:text="@string/your_activity_content"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:textSize="16dp"
            android:gravity="center_vertical"
            android:text="@string/your_activity_content"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:textSize="16dp"
            android:gravity="center_vertical"
            android:text="@string/your_activity_1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:textSize="16dp"
            android:gravity="center_vertical"
            android:text="@string/your_activity_2"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/redToolbar"
            android:textSize="20dp"
            android:gravity="center"
            android:id="@+id/cupon"
            android:text="@string/cuponTerms" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:textSize="16dp"
            android:gravity="center_vertical"
            android:text="@string/cuponTerms_content1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:textSize="16dp"
            android:gravity="center_vertical"
            android:text="@string/cuponTerms_content2"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:textSize="16dp"
            android:gravity="center_vertical"
            android:text="@string/cuponTerms_content3"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/redToolbar"
            android:textSize="20dp"
            android:gravity="center"
            android:text="@string/limitation"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:textSize="16dp"
            android:gravity="center_vertical"
            android:text="@string/limitation_content"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/redToolbar"
            android:textSize="20dp"
            android:gravity="center"
            android:text="@string/ServiceDescription"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:textSize="16dp"
            android:gravity="center_vertical"
            android:text="@string/ServiceDescription_content"
            />
</LinearLayout>
</LinearLayout>
    </ScrollView>