<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.shadowws.offurz.SwipeFragment">

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="always" />
    <item
    android:id="@+id/action_login"
    android:orderInCategory="100"
    android:title="@string/action_login"
    app:showAsAction="always" />
    <item
        android:id="@+id/action_signup"
        android:orderInCategory="100"
        android:title="@string/action_signup"
        app:showAsAction="always" />
    <!--<item-->
        <!--android:id="@+id/search"-->
        <!--android:title="Help"-->
        <!--app:showAsAction="ifRoom|collapseActionView" />-->
</menu>
