<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        tools:context="com.shadowws.offurz.Fragments.AboutUsFragment">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/redToolbar"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/AboutOffers4U" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/AboutOffers4U_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/redToolbar"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/WhyOffers4U" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/redToolbar"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/OurValues" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/OurValues_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/redToolbar"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/Our_Support" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/Our_support_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/redToolbar"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:text="Contact Us" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_vertical"
            android:text="Name :" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_vertical"
            android:text="Address :" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_vertical"
            android:text="Mobile No :" />

    </LinearLayout>
</ScrollView>
