<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:layout_height="match_parent"
    tools:context="com.shadowws.offurz.Fragments.EnquiryFragment"
    android:weightSum="1">

    <!-- TODO: Update blank fragment layout -->

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textColor="#fff"
        android:textSize="20dp"
            android:text="@string/firstname" />

    <EditText
        android:id="@+id/editText_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="textPersonName"
         />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:textColor="#fff"
        android:layout_marginLeft="20dp"
        android:text="@string/lastname" />
    <EditText
        android:id="@+id/editText_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        />
        <!--android:back_img="@drawable/square_shape"-->


    <TextView
        android:id="@+id/textView_email"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#fff"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:text="@string/Email" />

    <EditText
        android:id="@+id/editText2_email"
        android:layout_width="match_parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView_message"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:textColor="#fff"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:text="@string/message" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textMultiLine"
        android:layout_weight="0.27" />

    <TextView
        android:id="@+id/textView9"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:layout_marginLeft="20dp"
        android:text="@string/terms_conditions" />

    <Button
        android:id="@+id/sendmessage"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#fff"
        android:background="@drawable/round_button"
        android:text="Send Message" />

</LinearLayout>
